// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser Definitions Tests > Definition Range includes Attributes 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 29,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 30,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 30,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 48,
          "isAttributeModifier": false,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": undefined,
          "name": {
            "end": 29,
            "isIncomplete": false,
            "kind": 3,
            "start": 24,
            "text": "Title",
            "tokens": [
              {
                "FullStart": 20,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 20,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 20,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 5,
                "Start": 24,
                "Text": "Title",
                "Trailing": [],
                "Value": "Title",
              },
            ],
          },
          "start": 24,
          "value": [
            {
              "end": 48,
              "kind": 4,
              "start": 31,
              "token": {
                "FullStart": 31,
                "Kind": 604,
                "Leading": [],
                "Length": 17,
                "Start": 31,
                "Text": ""My Tally Report"",
                "Trailing": [
                  {
                    "FullStart": 48,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 48,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "My Tally Report",
              },
              "value": ""My Tally Report"",
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 19,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 19,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 48,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
            "Value": "MyReport",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 49,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    20,
    49,
  ],
  "start": 0,
  "text": "
[Report: MyReport]
    Title: "My Tally Report"
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
      "Value": "MyReport",
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 19,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 19,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 20,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 20,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 20,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 5,
      "Start": 24,
      "Text": "Title",
      "Trailing": [],
      "Value": "Title",
    },
    {
      "FullStart": 29,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 29,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 31,
      "Kind": 604,
      "Leading": [],
      "Length": 17,
      "Start": 31,
      "Text": ""My Tally Report"",
      "Trailing": [
        {
          "FullStart": 48,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 48,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "My Tally Report",
    },
    {
      "FullStart": 49,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 49,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Basic Definition 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 17,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 17,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 18,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 17,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 9,
            "Text": "MyReport",
            "Trailing": [],
            "Value": "MyReport",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 1,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 18,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[Report: MyReport]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 1,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 9,
      "Text": "MyReport",
      "Trailing": [],
      "Value": "MyReport",
    },
    {
      "FullStart": 17,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 17,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 18,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 18,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with @@include 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 33,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 33,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 11,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 11,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 12,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 12,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 34,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 33,
        "isIncomplete": false,
        "kind": 3,
        "start": 13,
        "text": "license\\licfuncs.tdl",
        "tokens": [
          {
            "FullStart": 13,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 13,
            "Text": "license",
            "Trailing": [],
            "Value": "license",
          },
          {
            "FullStart": 20,
            "Kind": 0,
            "Leading": [],
            "Length": 1,
            "Start": 20,
            "Text": "\\",
            "Trailing": [],
            "Value": undefined,
          },
          {
            "FullStart": 21,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 21,
            "Text": "licfuncs",
            "Trailing": [],
            "Value": "licfuncs",
          },
          {
            "FullStart": 29,
            "Kind": 212,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": ".",
            "Trailing": [],
            "Value": undefined,
          },
          {
            "FullStart": 30,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 30,
            "Text": "tdl",
            "Trailing": [],
            "Value": "tdl",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "@@include",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 201,
            "Leading": [],
            "Length": 2,
            "Start": 1,
            "Text": "@@",
            "Trailing": [],
            "Value": undefined,
          },
          {
            "FullStart": 3,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 3,
            "Text": "include",
            "Trailing": [
              {
                "FullStart": 10,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 10,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "include",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 34,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[@@include : license\\licfuncs.tdl]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 201,
      "Leading": [],
      "Length": 2,
      "Start": 1,
      "Text": "@@",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 3,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 3,
      "Text": "include",
      "Trailing": [
        {
          "FullStart": 10,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 10,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "include",
    },
    {
      "FullStart": 11,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 11,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 12,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 12,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 13,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 13,
      "Text": "license",
      "Trailing": [],
      "Value": "license",
    },
    {
      "FullStart": 20,
      "Kind": 0,
      "Leading": [],
      "Length": 1,
      "Start": 20,
      "Text": "\\",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 21,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 21,
      "Text": "licfuncs",
      "Trailing": [],
      "Value": "licfuncs",
    },
    {
      "FullStart": 29,
      "Kind": 212,
      "Leading": [],
      "Length": 1,
      "Start": 29,
      "Text": ".",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 30,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 30,
      "Text": "tdl",
      "Trailing": [],
      "Value": "tdl",
    },
    {
      "FullStart": 33,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 33,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 34,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 34,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with Attributes 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 29,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 30,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 30,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 48,
          "isAttributeModifier": false,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": undefined,
          "name": {
            "end": 29,
            "isIncomplete": false,
            "kind": 3,
            "start": 24,
            "text": "Title",
            "tokens": [
              {
                "FullStart": 20,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 20,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 20,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 5,
                "Start": 24,
                "Text": "Title",
                "Trailing": [],
                "Value": "Title",
              },
            ],
          },
          "start": 24,
          "value": [
            {
              "end": 48,
              "kind": 4,
              "start": 31,
              "token": {
                "FullStart": 31,
                "Kind": 604,
                "Leading": [],
                "Length": 17,
                "Start": 31,
                "Text": ""My Tally Report"",
                "Trailing": [
                  {
                    "FullStart": 48,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 48,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "My Tally Report",
              },
              "value": ""My Tally Report"",
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 57,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 57,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 58,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 58,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 65,
          "isAttributeModifier": false,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": undefined,
          "name": {
            "end": 57,
            "isIncomplete": false,
            "kind": 3,
            "start": 53,
            "text": "Form",
            "tokens": [
              {
                "FullStart": 49,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 49,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 49,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 4,
                "Start": 53,
                "Text": "Form",
                "Trailing": [],
                "Value": "Form",
              },
            ],
          },
          "start": 53,
          "value": [
            {
              "end": 65,
              "isIncomplete": false,
              "kind": 3,
              "start": 59,
              "text": "MyForm",
              "tokens": [
                {
                  "FullStart": 59,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 6,
                  "Start": 59,
                  "Text": "MyForm",
                  "Trailing": [
                    {
                      "FullStart": 65,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 65,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "MyForm",
                },
              ],
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 19,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 19,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 65,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
            "Value": "MyReport",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 66,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    20,
    49,
    66,
  ],
  "start": 0,
  "text": "
[Report: MyReport]
    Title: "My Tally Report"
    Form: MyForm
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
      "Value": "MyReport",
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 19,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 19,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 20,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 20,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 20,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 5,
      "Start": 24,
      "Text": "Title",
      "Trailing": [],
      "Value": "Title",
    },
    {
      "FullStart": 29,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 29,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 31,
      "Kind": 604,
      "Leading": [],
      "Length": 17,
      "Start": 31,
      "Text": ""My Tally Report"",
      "Trailing": [
        {
          "FullStart": 48,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 48,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "My Tally Report",
    },
    {
      "FullStart": 49,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 49,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 49,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 4,
      "Start": 53,
      "Text": "Form",
      "Trailing": [],
      "Value": "Form",
    },
    {
      "FullStart": 57,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 57,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 58,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 58,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 59,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 59,
      "Text": "MyForm",
      "Trailing": [
        {
          "FullStart": 65,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 65,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "MyForm",
    },
    {
      "FullStart": 66,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 66,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with Spaces in Name 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 23,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 23,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 24,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 23,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "My Report Name",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 2,
            "Start": 9,
            "Text": "My",
            "Trailing": [
              {
                "FullStart": 11,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 11,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "My",
          },
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 12,
            "Text": "Report",
            "Trailing": [
              {
                "FullStart": 18,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 18,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "Report",
          },
          {
            "FullStart": 19,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 19,
            "Text": "Name",
            "Trailing": [],
            "Value": "Name",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 1,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 24,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[Report: My Report Name]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 1,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 9,
      "Text": "My",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "My",
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 12,
      "Text": "Report",
      "Trailing": [
        {
          "FullStart": 18,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 18,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Report",
    },
    {
      "FullStart": 19,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 19,
      "Text": "Name",
      "Trailing": [],
      "Value": "Name",
    },
    {
      "FullStart": 23,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 23,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 24,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 24,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Definition with Symbols in Name (Include) 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 19,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "file.txt",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 10,
            "Text": "file",
            "Trailing": [],
            "Value": "file",
          },
          {
            "FullStart": 14,
            "Kind": 212,
            "Leading": [],
            "Length": 1,
            "Start": 14,
            "Text": ".",
            "Trailing": [],
            "Value": undefined,
          },
          {
            "FullStart": 15,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 15,
            "Text": "txt",
            "Trailing": [],
            "Value": "txt",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Include",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 1,
            "Text": "Include",
            "Trailing": [],
            "Value": "Include",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 19,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[Include: file.txt]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 1,
      "Text": "Include",
      "Trailing": [],
      "Value": "Include",
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 10,
      "Text": "file",
      "Trailing": [],
      "Value": "file",
    },
    {
      "FullStart": 14,
      "Kind": 212,
      "Leading": [],
      "Length": 1,
      "Start": 14,
      "Text": ".",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 15,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 15,
      "Text": "txt",
      "Trailing": [],
      "Value": "txt",
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 19,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 19,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Definitions Tests > Parse Menu Definition with Numbers and Decimals 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 40,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 40,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 41,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 41,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 75,
          "isAttributeModifier": false,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": undefined,
          "name": {
            "end": 38,
            "isIncomplete": false,
            "kind": 3,
            "start": 32,
            "text": "Indent",
            "tokens": [
              {
                "FullStart": 30,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 30,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 30,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                  {
                    "FullStart": 31,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 31,
                    "Text": "	",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 6,
                "Start": 32,
                "Text": "Indent",
                "Trailing": [
                  {
                    "FullStart": 38,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 2,
                    "Start": 38,
                    "Text": "		",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Indent",
              },
            ],
          },
          "start": 32,
          "value": [
            {
              "end": 75,
              "kind": 4,
              "start": 42,
              "token": {
                "FullStart": 42,
                "Kind": 604,
                "Leading": [],
                "Length": 33,
                "Start": 42,
                "Text": ""Dynamic Evaluation in Functions"",
                "Trailing": [
                  {
                    "FullStart": 75,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 75,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Dynamic Evaluation in Functions",
              },
              "value": ""Dynamic Evaluation in Functions"",
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 83,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 83,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 84,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 84,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 90,
          "isAttributeModifier": false,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": undefined,
          "name": {
            "end": 81,
            "isIncomplete": false,
            "kind": 3,
            "start": 77,
            "text": "Item",
            "tokens": [
              {
                "FullStart": 76,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 76,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 76,
                    "Text": "	",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 4,
                "Start": 77,
                "Text": "Item",
                "Trailing": [
                  {
                    "FullStart": 81,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 2,
                    "Start": 81,
                    "Text": "		",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Item",
              },
            ],
          },
          "start": 77,
          "value": [
            {
              "end": 90,
              "isIncomplete": false,
              "kind": 3,
              "start": 85,
              "text": "Blank",
              "tokens": [
                {
                  "FullStart": 85,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 85,
                  "Text": "Blank",
                  "Trailing": [
                    {
                      "FullStart": 90,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 90,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "Blank",
                },
              ],
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 101,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 101,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 102,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 102,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 119,
          "isAttributeModifier": false,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": undefined,
          "name": {
            "end": 100,
            "isIncomplete": false,
            "kind": 3,
            "start": 92,
            "text": "Key Item",
            "tokens": [
              {
                "FullStart": 91,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 91,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 91,
                    "Text": "	",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 3,
                "Start": 92,
                "Text": "Key",
                "Trailing": [
                  {
                    "FullStart": 95,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 95,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Key",
              },
              {
                "FullStart": 96,
                "Kind": 600,
                "Leading": [],
                "Length": 4,
                "Start": 96,
                "Text": "Item",
                "Trailing": [
                  {
                    "FullStart": 100,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 100,
                    "Text": "	",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Item",
              },
            ],
          },
          "start": 92,
          "value": [
            {
              "end": 119,
              "kind": 4,
              "start": 103,
              "token": {
                "FullStart": 103,
                "Kind": 604,
                "Leading": [],
                "Length": 16,
                "Start": 103,
                "Text": ""Dynamic Action"",
                "Trailing": [
                  {
                    "FullStart": 119,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 3,
                    "Start": 119,
                    "Text": " 		",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Dynamic Action",
              },
              "value": ""Dynamic Action"",
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 28,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 28,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 29,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 5,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 5,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 6,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 6,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 119,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 28,
        "isIncomplete": false,
        "kind": 3,
        "start": 7,
        "text": "Whats New in Rel 1.52",
        "tokens": [
          {
            "FullStart": 7,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 7,
            "Text": "Whats",
            "Trailing": [
              {
                "FullStart": 12,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 12,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "Whats",
          },
          {
            "FullStart": 13,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 13,
            "Text": "New",
            "Trailing": [
              {
                "FullStart": 16,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 16,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "New",
          },
          {
            "FullStart": 17,
            "Kind": 503,
            "Leading": [],
            "Length": 2,
            "Start": 17,
            "Text": "in",
            "Trailing": [
              {
                "FullStart": 19,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 19,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "in",
          },
          {
            "FullStart": 20,
            "Kind": 600,
            "Leading": [],
            "Length": 3,
            "Start": 20,
            "Text": "Rel",
            "Trailing": [
              {
                "FullStart": 23,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 23,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": "Rel",
          },
          {
            "FullStart": 24,
            "Kind": 603,
            "Leading": [],
            "Length": 4,
            "Start": 24,
            "Text": "1.52",
            "Trailing": [],
            "Value": "1.52",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 5,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Menu",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 1,
            "Text": "Menu",
            "Trailing": [],
            "Value": "Menu",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 122,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    30,
    31,
    76,
    91,
  ],
  "start": 0,
  "text": "[Menu: Whats New in Rel 1.52]

	Indent		: "Dynamic Evaluation in Functions"
	Item		: Blank
	Key Item	: "Dynamic Action" 		",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 1,
      "Text": "Menu",
      "Trailing": [],
      "Value": "Menu",
    },
    {
      "FullStart": 5,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 5,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 6,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 6,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 7,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 7,
      "Text": "Whats",
      "Trailing": [
        {
          "FullStart": 12,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 12,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Whats",
    },
    {
      "FullStart": 13,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 13,
      "Text": "New",
      "Trailing": [
        {
          "FullStart": 16,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 16,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "New",
    },
    {
      "FullStart": 17,
      "Kind": 503,
      "Leading": [],
      "Length": 2,
      "Start": 17,
      "Text": "in",
      "Trailing": [
        {
          "FullStart": 19,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 19,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "in",
    },
    {
      "FullStart": 20,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 20,
      "Text": "Rel",
      "Trailing": [
        {
          "FullStart": 23,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 23,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Rel",
    },
    {
      "FullStart": 24,
      "Kind": 603,
      "Leading": [],
      "Length": 4,
      "Start": 24,
      "Text": "1.52",
      "Trailing": [],
      "Value": "1.52",
    },
    {
      "FullStart": 28,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 28,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 29,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 29,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 30,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 30,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
        {
          "FullStart": 31,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 31,
          "Text": "	",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 6,
      "Start": 32,
      "Text": "Indent",
      "Trailing": [
        {
          "FullStart": 38,
          "Kind": 601,
          "Leading": [],
          "Length": 2,
          "Start": 38,
          "Text": "		",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Indent",
    },
    {
      "FullStart": 40,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 40,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 41,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 41,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 42,
      "Kind": 604,
      "Leading": [],
      "Length": 33,
      "Start": 42,
      "Text": ""Dynamic Evaluation in Functions"",
      "Trailing": [
        {
          "FullStart": 75,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 75,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Dynamic Evaluation in Functions",
    },
    {
      "FullStart": 76,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 76,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 76,
          "Text": "	",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 4,
      "Start": 77,
      "Text": "Item",
      "Trailing": [
        {
          "FullStart": 81,
          "Kind": 601,
          "Leading": [],
          "Length": 2,
          "Start": 81,
          "Text": "		",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Item",
    },
    {
      "FullStart": 83,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 83,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 84,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 84,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 85,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 85,
      "Text": "Blank",
      "Trailing": [
        {
          "FullStart": 90,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 90,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Blank",
    },
    {
      "FullStart": 91,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 91,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 91,
          "Text": "	",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 3,
      "Start": 92,
      "Text": "Key",
      "Trailing": [
        {
          "FullStart": 95,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 95,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Key",
    },
    {
      "FullStart": 96,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 96,
      "Text": "Item",
      "Trailing": [
        {
          "FullStart": 100,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 100,
          "Text": "	",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Item",
    },
    {
      "FullStart": 101,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 101,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 102,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 102,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 103,
      "Kind": 604,
      "Leading": [],
      "Length": 16,
      "Start": 103,
      "Text": ""Dynamic Action"",
      "Trailing": [
        {
          "FullStart": 119,
          "Kind": 601,
          "Leading": [],
          "Length": 3,
          "Start": 119,
          "Text": " 		",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Dynamic Action",
    },
    {
      "FullStart": 122,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 122,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;
